tests/paczka1/fuzzy1/69201506.err
Error in line 2: AQs S561 27,4
Error in line 6: ZRLqpP4RvnS A768 91,4
Error in line 10: N923cSz A768 93,0
Error in line 16: N923cSz S256 41,5
Error in line 15: S7CWN S256 60,6
Error in line 28: S561 A768 0,6
Error in line 39: S561 S256 56,1
